--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>moshions website</title>
+		<title>Inzuki designs</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
